Login y conexion base de datos en la nube

--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -13,7 +13,7 @@
                   <div class="box">
                     <figure class="avatar">
                       <img
-                        src="/img/fondo2.png" alt="Logo Marketplace" width="250" height="220"/>
+                        src="/img/logo.png" alt="Logo Marketplace" width="250" height="220"/>
                     </figure>
                     <form action="/signup" method="POST">
                       <div class="form-group">
@@ -31,19 +31,6 @@
                       <div class="form-group">
                         <input type="password" name="confirmation" placeholder="Confirme su Contraseña" class="form-control" pattern="[A-Za-z0-9]*[0-9][A-Za-z0-9]*" required>
                       </div>
-
-                      <div class="form-group">
-                        <input type="text" name="phone" placeholder="Telefono" class="form-control" pattern= "^[0-9,$]*$" required oninvalid="setCustomValidity('Solo valores numericos')" oninput="setCustomValidity('')">
-                      </div>
-
-                      <div class="form-group">
-                        <input type="text" name="department" placeholder="Departamento" class="form-control" required>
-                      </div>
-
-                      <div class="form-group">
-                        <input type="text" name="town" placeholder="Municipio" class="form-control" required>
-                      </div>
-
                       <div class="form-group">
                         <button class="btn btn-success btn-block">
                           Registrarse
