--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <i class="fas fa-link"></i> Farmganic
+      <i class="fas fa-link"></i> Racun Sistema de Facturacion
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -10,40 +10,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         {{#if user}}
-        <form action="/searchLog" method="GET">
-          <div id="search" class="input-group" style="width: 100%;">
-            <input name="name" class="inputSearch" placeholder="Buscar Semilla" />
-              <button type="submit" class="btn btn-primary">
-                <i class="fas fa-search"></i>
-              </button>
-            </div>
-        </form>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-          Productos
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/seeds">Mis productos</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/seeds/addseed">Agregar Producto</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="">Clientes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Perfil Usuario</a>
+          <a class="nav-link" href="">Zonas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Servicios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar sesion</a>
         </li>
         {{else}}
-        <form action="/search" method="GET">
-          <div id="search" class="input-group" style="width: 100%;">
-            <input name="name" class="inputSearch" placeholder="Buscar Semilla" />
-              <button type="submit" class="btn btn-primary">
-                <i class="fas fa-search"></i>
-              </button>
-            </div>
-        </form>
         <li class="nav-item">
           <a class="nav-link" href="/signin" style="margin-right: 20px;">Iniciar Sesion</a>
         </li>
