--- a/src/views/seeds/singleItem.hbs
+++ b/src/views/seeds/singleItem.hbs
@@ -4,17 +4,12 @@
       <img src="/img/fondo3.jpg" alt="" width="500">
     </div>
     <div class="col align-items-center">
-      <h2 id="quantity" class="subtitle is-4">Datos de la semilla</h2>
-      <p id="name" class="title is-2"><b>Producto:</b> {{seller.name}}</p>
-        <p id="quantity" class="subtitle is-4"> <b>Cantidad disponible:</b> {{seller.quantityAvailable}}</p>
-        <p id="price" class="subtitle is-4"> <b>Precio por Kg:</b> {{seller.priceKg}}</p>
-        <p id="cultivationTown"  value=""class="subtitle is-4"> <b>Lugar de Cultivacion:</b> {{seller.cultivationTown}}</p>
-        <p id="description" class="subtitle is-4"> <b>Descripcion:</b> {{seller.description}}</p>
-        <h2 id="quantity" class="subtitle is-4 " style="margin-top:30px ;">Datos del vendedor</h2>
-        <p id="fullname" class="subtitle is-4"> <b>Nombre:</b> {{seller.fullname}}</p>
-        <p id="email" class="subtitle is-4"> <b>Correo:</b> {{seller.email}}</p>
-        <p id="phone" class="subtitle is-4"> <b>Celular:</b> {{seller.phone}}</p>
-        <p id="department" class="subtitle is-4"> <b>Residencia:</b>  {{seller.town}}-{{seller.department}}</p>
+      <h2 id="quantity" class="subtitle is-4">Datos del Cliente</h2>
+        <p id="fullname" class="subtitle is-4"> <b>Nombre:</b> </p>
+        <p id="email" class="subtitle is-4"> <b>Correo:</b> </p>
+        <p id="phone" class="subtitle is-4"> <b>Celular:</b></p>
+        <p id="zone" class="subtitle is-4"> <b>Zona:</b></p>
+        <p id="status" class="subtitle is-4"> <b>Estado:</b></p>
     </div>
   </div>
 </div>
