--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -15,7 +15,7 @@
                   <div class="box">
                     <figure class="avatar">
                       <img
-                        src="/img/fondo2.png" alt="Logo Marketplace" width="250" />
+                        src="/img/logo.png" alt="Logo Marketplace" width="250" />
                     </figure>
                     <form action="/signin" method="POST">
                       <div class="form-group">
@@ -33,11 +33,7 @@
                       </form>
                     </div>
                     <p class="has-text-grey">
-                      <label class="label">¿No tienes una cuenta?
-                        <a class="is-info" style="color:blue"
-                          href="/signup"><i>Registrarse</i></a></label>
-                      <a href="../">Olvidaste tu contraseña</a> &nbsp;·&nbsp;
-                      <a href="../">¿Necesitas ayuda?</a>
+                      <a href="../">Olvidaste tu contraseña</a>
                     </p>
                   </div>
                 </div>
